<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_popup"
            style="@style/text_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/login_with_mobile_number"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/bg_editext">


            <TextView
                style="@style/text_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/_91"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398" />

            <EditText
                android:id="@+id/et_phoneNumber_popup"
                style="@style/text_12"
                android:layout_width="match_parent"
                android:lines="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="1234567890"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"

                tools:ignore="Autofill" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/btnMobileNumber"
            style="@style/text_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bg_border_primary"
            android:drawablePadding="@dimen/_15sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</androidx.cardview.widget.CardView>

