<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <include layout="@layout/appbar_layout" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">


        <TextView
            style="@style/text_14_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/sit_back_amp_relax_while_we_verify_your_mobile_number"
            android:textColor="@color/colorWhite" />

        <TextView
            style="@style/text_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/enter_the_otp_below_in_case_if_we_fail_to_detect_the_sms_automatically"
            android:textColor="@color/color_929398" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                style="@style/text_18_bold"
                android:id="@+id/etOTP1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_otp"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"
                tools:ignore="Autofill" />

            <EditText
                style="@style/text_18_bold"
                android:layout_width="@dimen/_35sdp"
                android:id="@+id/etOTP2"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_otp"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"
                tools:ignore="Autofill" />

            <EditText
                style="@style/text_18_bold"
                android:id="@+id/etOTP3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_otp"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"
                tools:ignore="Autofill" />

            <EditText
                style="@style/text_18_bold"
                android:id="@+id/etOTP4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_otp"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"
                tools:ignore="Autofill" />

            <EditText
                style="@style/text_18_bold"
                android:layout_width="@dimen/_35sdp"
                android:id="@+id/etOTP5"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/bg_otp"
                android:ems="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/color_929398"
                tools:ignore="Autofill" />


        </LinearLayout>

        <TextView
            style="@style/text_14_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/tvResendOtp"
            android:gravity="start"
            android:padding="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/resend_otp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/btnOtpButton"
            style="@style/text_14_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_border_primary"
            android:gravity="center"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent" />

        <TextView
            style="@style/text_14_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:text="+912136547890"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_edit_border" />


    </LinearLayout>

</LinearLayout>